# herokuconfigurator

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
herokuconfigurator/: herokuconfigurator.py
lib/: heroku.py
