[tool.poetry]
name = "herokuconfigurator"
version = "0.1.0"
description = "This project lets you configure Heroku applications via a Docker invoked CLI"
authors = ["Chris Patti <feoh@feoh.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
heroku3 = "^5.2.1"
typer = {extras = ["all"], version = "^0.15.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
